public/css/styles.css
html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
    margin: 0;
    padding: 0;
    border: 0;
    font-size: 100%;
    font: inherit;
    vertical-align: baseline;
}

/* HTML5 display-role reset for older browsers */

article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
    display: block;
}
body {
    line-height: 1;
}
ol, ul {
    list-style: none;
}
blockquote, q {
    quotes: none;
}
blockquote:before, blockquote:after, q:before, q:after {
    content: '';
    content: none;
}
table {
    border-collapse: collapse;
    border-spacing: 0;
}
/*Everthing above is the reset. DONT CHANGE*/
/*////////////////////////////////////////////*/
html{
    width:100%;
    height:100%;
}
body{
    width:100%;
    height:100%;
    background-color: white;
    font-family: 'Fjalla One', sans-serif;
}

.wrapper {
  width: 100%;
  height: auto;
  background-color: rgba(0, 0, 0, 0.1);
  position: absolute;
  top: 0;
  bottom: 0;
  width: 100%;
}
header {
    position: fixed;
    width:100%;
    height: 60px;
    background-color: rgba(0, 0, 0, 0.7);
}
.nameLink {
  display: inline-block;
  float: left;
  margin: 20px;
  font-size: 30px;
  /*font-family: 'Fjalla One', sans-serif;*/
  color: rgb(237, 237, 237);
}
.nav h2 {
  display: inline-block;
  margin: 20px;
  font-size: 30px;
  float: right;
  /*font-family: 'Fjalla One', sans-serif;*/
  color: rgb(237, 237, 237);
}
/*~~~~~~~~HOME PAGE~~~~~~~~~~~*/
.home {
  clear: both;
  /*max-width: 100%;*/
  display: webkit flex;
  display: flexbox;
  display: flex;
  flex-flow: row;
  justify-content: center;
  height: 100%;
  webkit-background-siz: cover;
  background-size: cover;
}
.homeBGimage {
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.5);

}
.homeContent {
  height: 300px;
  max-width: 700px;
  margin: auto;
  padding-top: 250px;
}
.homeContent h1 {
  color: rgb(237, 237, 237);
  line-height: 1.5em;
  font-size: 35px;

}
/*~~~~~~~~ABOUT PAGE~~~~~~~~~~~*/
.about {
  display: webkit flex;
  display: flexbox;
  display: flex;
  flex-flow: row;
  justify-content: center;
  height: 100%;
  webkit-background-siz: cover;
  background-size: cover;
}
.aboutImage1 {
  height: 350px;
  width: 400px;
  display: inline-block;
  background-color: white;
  margin-top: 125px;
  margin-right: 30px;
  border: 1px solid rgba(0, 0, 0, 0.5);
  background-color: rgba(252, 244, 244, .6);
  webkit-box-shadow: -1px 1px 5px 4px #606060;
  -moz-box-shadow: -1px 1px 5px 4px #606060;
  box-shadow: -1px 1px 5px 4px #606060;
  border-radius: 15px;

}
#homeImage {
  height: 350px;
  width: 400px;
  border-radius: 15px;
}
.aboutMeDiv {
  /*display: inline-block;*/
  width: 50%;
  /*display: flex;*/
  height: 100%;
  margin-top: 110px;

}
.aboutMeDiv h1 {
  /*float: right;*/
  font-size: 30px;
  line-height: 1em;
  color: rgba(0, 0, 0, 0.5);
}
.aboutMeDiv h2 {

  line-height: 1.8em;
  font-size: 25px;
  color: rgba(0, 0, 0, 0.5);
}
/*~~~~~~~~~WORK PAGE~~~~~~~~~*/
.work {
  display: webkit flex;
  display: flexbox;
  display: flex;
  flex-flow: row;
  justify-content: center;
  height: 100%;
  /*webkit-background-siz: cover;
  background-size: cover;*/

}

.projectsLeft {
  /*display: inline-block;*/
  width: 40%;
  display: flex;
  flex-wrap: wrap;
  /*justify-content: flex-start;*/
  flex-direction: column;
  height: 100%;
}
.projectsLeft h1 {
  /*display: inline-block;*/
  display: flex;
  align-self: center;
  margin-bottom: 30px;
  font-size: 40px;
}
.projectsLeft h2 {
  display: inline-block;
  display: flex;
  align-self: center;
  font-size: 1.5em;
  color: rgba(0, 0, 0, 0.8);
  margin-bottom: 15px;
  padding: 10px;
  line-height: 1.5em;

}
.displayProjectsRight {
  width: auto;
  padding: 20px;
  display: flex;
  /*justify-content: center;*/
  height: 100%;
  /*align-items: center;*/
  background-image: url("/assets/monitorBG3.jpg");
  background-repeat: no-repeat;

}
.displayProjectsRight h1 {
  font-size: 50px;
  color: white;
}
.monitorDisplay {
  height: 380px;
  width: 667px;
  display: flex;
  margin: 4px 0 0 4px;
  overflow: hidden;
}
#golf {
  /*background-image: url("/assets/rewardsHome.png");*/
  background-repeat: no-repeat;
  height: 380px;
  width: 667px;
  overflow: hidden;
}
#nextImage {
  position: absolute;
  display: inline-block;
  z-index: 2;
}
#cti {
  background-image: url("/assets/ctiUpload.png");
  background-repeat: no-repeat;
  height: 380px;
  width: 667px;
  overflow: hidden;
}
/*~~~~~~~~~~~CONTACT PAGE~~~~~~~~*/
.contact {
  display: webkit flex;
  display: flexbox;
  display: flex;
  flex-flow: row;
  justify-content: center;
  height: 100%;
  webkit-background-siz: cover;
  background-size: cover;
  background-color: rgba(0, 0, 0, 0.2);;
}
/*~~~~~~~~~~~~FOOTER~~~~~~~~~~~~~~~*/
footer {
  height: 80px;
  background-color: rgba(0, 0, 0, 0.9);
}
footer h1 {
  color: rgb(237, 237, 237);
  font-size: 30px;
}

